summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value Direction
    setDirection(dir:Direction.EAST)    
                     ^Moria:3: error: not found: value dir
    setDirection(dir:Direction.EAST)    
                 ^